[package]
name = "menus"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["meshlet","meshlet_processor", "bevy_dev_tools"] }
bevy_egui = "0.30.0"
bevy_prototype_debug_lines = "0.12.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
async-std = "1.13.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html#the-patch-section
#[patch.crates-io]
#zune-jpeg = { git = "https://github.com/ironpeak/zune-image", rev = "eebb01b72c07aaf8b00200d9d87d4cba6f01651f" }
